--- a/css/css.css
+++ b/css/css.css
@@ -175,11 +175,23 @@
     float: right;
     background-color: white;
     width: 800px;
-    height: 550px;
+    height: 650px;
     margin-top: 100px;
     margin-left: 50px;
 }
 .input-group-text{
     background-color: white;
     border: none;
+}
+.header_img img{
+    width: 50px;
+    height: 33px;
+    margin-left: 0;
+}
+.per_info{
+    background: wheat;
+    width: 760px;
+    height: 200px;
+    margin-left: 20px;
+    margin-top: 20px;
 }
