--- a/css/css.css
+++ b/css/css.css
@@ -182,8 +182,9 @@
 }
 .header_img img{
     width: 50px;
-    height: 33px;
+    height: 50px;
     margin-left: 0;
+    margin-top: -10px;
 }
 .per_info1{
     background: #c3d8fc;
@@ -245,7 +246,7 @@
 .per_header img{
     width:50px;
     height:50px;
-    border-radius: 50%;
+
 }
 .per_content img{
     width: 400px;
@@ -253,6 +254,11 @@
 }
 #background_img{
     background-image: url("../images/5.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#background_imgfx{
+    background-image: url("../images/3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -369,11 +375,6 @@ margin-left: 70px;
     text-decoration: none;
     font-size: 14px;
 }
-.comment_com a{
-    color: darkgray;
-    text-decoration: none;
-    font-size: 14px;
-}
 .comment_share1 a{
   color: white;
 }
@@ -392,6 +393,10 @@ margin-left: 70px;
 }
 .del_share a img:hover{
     background-color:#80abdd;
+}
+.per_one{
+    width: 130px;
+    height: 24px;
 }
 
 
