--- a/css/css.css
+++ b/css/css.css
@@ -426,11 +426,11 @@ margin-left: 70px;
     color: #02994a;
 }
 .list_content{
-    height: 100px;
+    height: 90px;
     line-height: 20px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     overflow: hidden;
     font-size: 16px;
     color: black;
@@ -452,4 +452,7 @@ margin-left: 70px;
  font-size: 25px;
  color: white;
     font-weight: bold;
+}
+.yingcang img{
+    display: none;
 }
